--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -7,7 +7,7 @@
     font-weight: 300;
     margin-bottom: -10px; 
     /* margin-top: 10px;  */
-    margin-top: 160px; 
+    margin-top: 10px; 
     padding-top: 50px; 
     text-align: center;
     letter-spacing: .3rem;
@@ -40,11 +40,6 @@ h6 {
   line-height: 1.5;
 }
 
-a:link,
-a:active,
-a:visited{
-  color:rgba(255,255,255,1);
-}
 
 a:hover{
   color:rgba(255,255,255,0.6);
@@ -123,7 +118,7 @@ a:hover{
 
 .team-member figure:hover figcaption {
   visibility: visible;
-  color: #0066c8;
+  color: black;
   background: white;
   opacity: 0.95;
   /* Primary color, can be changed via colors.css */
@@ -176,11 +171,13 @@ a:hover{
   margin-top: 38px; 
   margin-bottom: 40px; 
   letter-spacing: 25px; 
-  color: black;
   padding: 10px; 
-  background-color: rgb(124, 124, 124);
   width: 100%;
   text-decoration: none; 
+}
+
+.devsite-products-alphabet-link {
+  color: black; 
 }
 
 .devsite-products-alphabet-link:hover {
