--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -5,9 +5,9 @@
     font-family: 'Raleway'; 
     font-size: 40px; 
     font-weight: 300;
-    margin-bottom: -10px; 
+    margin-bottom: -15px; 
     /* margin-top: 10px;  */
-    margin-top: 10px; 
+    margin-top: 150px; 
     padding-top: 50px; 
     text-align: center;
     letter-spacing: .3rem;
@@ -158,22 +158,17 @@ a:hover{
   transition: all 0.4s ease-in-out;
 }
 
-
-
-
-
-
-
-
+/* // alphabet people  */
 .alpha-head {
   text-align: center; 
   font-size: 18px; 
   margin-top: 38px; 
-  margin-bottom: 40px; 
+  margin-bottom: 25px; 
   letter-spacing: 25px; 
   padding: 10px; 
   width: 100%;
   text-decoration: none; 
+  background-color: rgb(236, 236, 236);
 }
 
 .devsite-products-alphabet-link {
@@ -185,6 +180,17 @@ a:hover{
   color:  rgb(151, 184, 19); 
   cursor: pointer; 
 }
+/* // end of alphabet people */
 
+.search-name {
+  border: 1px solid black; 
+  padding: 20px; 
+  width: 550px; 
+  color: gray; 
+  margin-top: 20px; 
+}
 
-
+section .search-name {
+  margin: auto; 
+  font-family: 'Raleway';
+}
