--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -28,9 +28,9 @@
 h1,
 h2,
 h3,
-h4,
 h5,
-h6 {
+h6,
+#people-name {
   margin: 0 0 20px 0;
   text-transform: none;
   color: black;
@@ -95,11 +95,17 @@ a:hover{
   padding: 10px;
 }
 
-.team-member h4 {
+.team-member #people-name {
   margin: 10px 0 0;
   padding: 0;
   font-size: 21.5px;
 }
+
+#people-name:hover {
+  color: #006dd3;
+  cursor: pointer; 
+}
+
 
 .team-member figcaption {
   padding: 50px;
