--- a/assets/css/whoweare.css
+++ b/assets/css/whoweare.css
@@ -61,8 +61,9 @@
 .about-us aside ul li {
   margin-top: 20px; 
   display: table;
-  width: 100%;
+  width: 100%; 
   height: 170px;
+  padding: 2px; 
 }
 @media only screen and (min-width: 1000px) {
   .about-us aside ul li {
@@ -91,7 +92,7 @@
 }
 .about-us aside ul li h3 span:first-child {
   font-family: 'Roboto', sans-serif;
-  font-size: 52px;
+  font-size: 50px;
   font-weight: 700;
 }
 .about-us aside ul li h3 span:nth-child(2) {
