--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -12,6 +12,12 @@
   text-align: center; 
 }
 
+#latest-headlines:hover {
+  cursor: pointer;
+  color:   #0371d8;
+}
+
+
 .container {
     padding-top: 0px;
     font-family: 'Raleway';
