updated 750 media query

--- a/assets/css/socialmediabuttons.css
+++ b/assets/css/socialmediabuttons.css
@@ -106,6 +106,12 @@
 /* // END OF SOCIAL MEDIA BUTTONS */
 /* //////// ****** /////////////////////////// */
 
+@media only screen and (max-width: 750px) {
+#social {
+  padding-top: 250px; 
+}
+}
+
 
 
 
