--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -27,7 +27,6 @@
     padding:40px;
     border: 1px solid black; 
     z-index: 1; 
-    opacity: 0.9; 
 }
 
 .fa-quote-left {
@@ -55,7 +54,7 @@
     width: 480px;
     padding:30px;
     border: 1px solid black;
-    background: black;
+    background: rgb(14, 14, 14);
     z-index: 2; 
 }
 
