updated LP and testimonials LP

--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -231,13 +231,13 @@ font-weight: bold;
   }
   .testimonials .block:nth-child(3), .testimonials .block:nth-child(5),   .testimonials .block:nth-child(7) {
     /* background-color: rgb(138, 171, 37);  */
-    background-color: #1a6ab6;
+    background-color: rgb(140, 170, 20); 
   }
   .testimonials .block:nth-child(6), .testimonials .block:nth-child(8) {
     background-color: black;
   }
   .testimonials .block:nth-child(9) {
-    background-color:  #1a6ab6;
+    background-color:  rgb(140, 170, 20); 
   }
   .testimonials .block p {
     margin: 0;
