few aesthetic updates

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -47,7 +47,7 @@
   .contact-email {
     font-size: 16px; 
     /* color: rgb(140, 170, 20); */
-    color:  #0371d8;
+    color:  black;
     font-family: 'Raleway'; 
     font-weight: 400;
     letter-spacing: 1px; 
