--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -3,7 +3,7 @@
 #testimonials {
     margin-top: 1%; 
     margin-left: 1%;
-    font-size: 45px; 
+    font-size: 40px; 
     font-family: 'Raleway';
     font-weight: 300; 
     z-index: 2; 
@@ -15,7 +15,7 @@
 
 #testimonials:hover {
   cursor: pointer;
-  color:  #0371d8;
+  color:  #6e6e6e;
 }
 
 #box {
@@ -41,7 +41,7 @@
     z-index: 3; 
     color: rgb(190, 190, 190);
     position: absolute;
-    margin-top: -38px;
+    margin-top: -25px;
     margin-left: 350px;
 }
 
@@ -53,34 +53,36 @@
     height: 230px; 
     width: 480px;
     padding:30px;
-    border: 1px solid black;
-    background: rgb(14, 14, 14);
+    border: none;
+    background: rgb(245, 245, 245); 
     z-index: 2; 
 }
 
 #box2-text {
 font-family: 'Raleway';
-font-size: 20px; 
+font-size: 17px; 
+letter-spacing: 1px; 
 justify-content: left;
-color: white;
+color: black;
 }
 
 #box2-speaker {
 font-family: 'Raleway';
-margin-top: -7px; 
+margin-top: -4px; 
 font-size: 14px; 
-color: rgb(140, 170, 20); 
+letter-spacing: 1px; 
+color: black;
 text-align: right; 
-font-weight: bold; 
+font-weight: 400;
 }
 
 #box3-speaker {
     font-family: 'Raleway';
-    margin-top: 12px; 
+    margin-top: 14px; 
     font-size: 14px; 
-    color:  #0066c8;
+    color:  black;
     text-align: left;
-    font-weight: bold; 
+    font-weight: 400;
     }
 
 #box3 {
@@ -90,7 +92,8 @@ font-weight: bold;
     width: 470px; 
     height: 260px;
     font-family: 'Raleway';
-    font-size: 19px; 
+    font-size: 17px; 
+    letter-spacing: 1px; 
     padding: 32px; 
     color: black;
     border: 1px solid black;
