--- a/assets/css/whoweare.css
+++ b/assets/css/whoweare.css
@@ -2,6 +2,7 @@
 /* //////// ****** /////////////////////////// */
 /* // BEGINNING OF WHO WE ARE SECTION */
 .white {background-color: rgb(255, 255, 255); height: 100%;}
+/* .white2 {background-color: rgb(245, 245, 245); height: 240px; } */
 
 .about-us {
   padding-top: 100px; 
@@ -20,11 +21,12 @@
 
 #about-us-read {
   color: black; 
+  font-weight: 320;
   border: 1px solid black; 
   width: 151px;
   padding: 10px; 
   text-align: center; 
-  font-size: 17.5px; 
+  font-size: 16px; 
   font-family: 'Raleway';
   margin-top: 18px;
 }
@@ -36,14 +38,15 @@
 .about-us article h2 {
   margin: 0;
   font-family: Raleway; 
-  font-size: 50px;
-  font-weight: 300;
+  font-size: 45px;
+  font-weight: 270;
+  letter-spacing: 2px; 
   color: black;
 }
 .about-us article p {
   margin-top: 4px; 
   margin-bottom: 0em;
-  font-size: 20px;
+  font-size: 19px;
   line-height: 28px;
   font-weight: 245;
   color: black;
