updated LP section

--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -71,7 +71,7 @@ font-family: 'Raleway';
 margin-top: -4px; 
 font-size: 14px; 
 letter-spacing: 1px; 
-color: black;
+color:  #0379e7;
 text-align: right; 
 font-weight: 400;
 }
@@ -80,7 +80,7 @@ font-weight: 400;
     font-family: 'Raleway';
     margin-top: 14px; 
     font-size: 14px; 
-    color:  black;
+    color:  #0379e7;
     text-align: left;
     font-weight: 400;
     }
