--- a/assets/css/fraud.css
+++ b/assets/css/fraud.css
@@ -8,7 +8,7 @@
     margin-top: 10px; 
     padding-top: 50px; 
     text-align: center;
-    letter-spacing: .3rem;
+    letter-spacing: .7rem;
     color: black;
   }
   
@@ -24,9 +24,11 @@
   }
 
   .fraud-subheader {
-    color: #0066c8;
-    font-size: 18px;
-    padding-bottom: 10px; 
+    font-family: 'Playfair Display', serif;
+    font-weight: 450;
+    font-size: 17.5px;
+    text-align: justify;
+    padding-bottom: 20px; 
 }
   
 
@@ -41,8 +43,9 @@
 #contact h3 {
     color: rgb(152, 185, 19); 
 	display: block;
-	font-size: 30px;
-	font-weight: 400;
+    font-size: 30px;
+    letter-spacing: 1px; 
+	font-weight: 390;
 }
 
 #contact h4 {
