--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -67,7 +67,7 @@ color: black;
 }
 
 #box2-speaker {
-font-family: 'Raleway';
+font-family: 'Playfair Display', serif;
 margin-top: -4px; 
 font-size: 14px; 
 letter-spacing: 1px; 
@@ -77,7 +77,7 @@ font-weight: 400;
 }
 
 #box3-speaker {
-    font-family: 'Raleway';
+  font-family: 'Playfair Display', serif;
     margin-top: 14px; 
     font-size: 14px; 
     color:  #0379e7;
