--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -104,7 +104,8 @@
   }
 
   .view-more-news:hover {
-   color: rgb(148, 179, 24); 
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
    cursor: pointer; 
   }
   /* //////// ****** /////////////////////////// */
