--- a/assets/css/navbar-logo.css
+++ b/assets/css/navbar-logo.css
@@ -45,6 +45,20 @@ html {
     position: absolute;  
     padding-bottom: 10px; 
   }
+  #logo-ST {
+    margin-top: 15.5em;
+    margin-left: 1.2em; 
+    width: 240px;
+    border-radius: 0; 
+    z-index: 4; 
+    position: absolute;  
+    padding-bottom: 10px; 
+  }
+  #logo-ST:hover {
+    -webkit-transform: scale(1.15);
+    transform: scale(1.15);
+  cursor: pointer; 
+  }
   .navigation{
     padding-bottom:30px;
     padding-right: 50px; 
@@ -145,11 +159,19 @@ html {
       width: 115px; 
       margin-left: .5em;
     }
-  }
+    #logo-ST {
+        margin-top: 3em;
+        width: 90px;
+      }
+    }
   @media only screen and (max-width: 750px) {
     #logo-main {
       width: 180px; 
       margin-left: .6em;
+    }
+    #logo-ST {
+      margin-top: 6.5em;
+      width: 140px;
     }
   }
   @media only screen and (max-width: 1035px) {
