--- a/assets/css/awards.css
+++ b/assets/css/awards.css
@@ -1,6 +1,11 @@
 .whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
 /* // BEGINNING OF AWARDS CAROUSEL ON LANDING PAGE */
+
+/* body {
+  background-color: rgb(247, 247, 247); 
+} */
+
 #clients {
 display: block;
 margin-left: auto;
