--- a/assets/css/socialmediabuttons.css
+++ b/assets/css/socialmediabuttons.css
@@ -3,7 +3,7 @@
 #social {
     text-align: center;
     padding-top: 46px; 
-    padding-bottom: 30px; 
+    padding-bottom: 35px; 
     background-color: white;
   }
   
@@ -13,7 +13,6 @@
       cursor: pointer;
       width: 50px;
       height: 50px;
-      border:1px solid rgb(233, 233, 233); 
       padding: 0px;
       text-decoration: none;
       text-align: center;
@@ -45,9 +44,8 @@
   }
   
   .facebookBtn:hover{
-      color: black;
+    color: #056dcf;
       background: white; 
-      border-color: rgb(142, 177, 37);  /* change the border color on mouse hover */
   }
   
   /* twitter button class*/
@@ -63,9 +61,8 @@
   }
   
   .twitterBtn:hover{
-    color: rgb(20, 20, 20);
+    color: #056dcf;
     background: white; 
-    border-color: rgb(142, 177, 37);  /* change the border color on mouse hover */
   }
   
   /* google plus button class*/
@@ -79,9 +76,8 @@
   }
   
   .googleplusBtn:hover{
-    color: rgb(20, 20, 20);
-    background: white; 
-    border-color: rgb(142, 177, 37);  /* change the border color on mouse hover */
+    color: #056dcf;
+      background: white; 
   }
   
   /* linkedin button class*/
@@ -96,9 +92,8 @@
   }
   
   .linkedinBtn:hover{
-    color: rgb(20, 20, 20);
+    color: #056dcf;
     background: white; 
-    border-color: rgb(142, 177, 37);  /* change the border color on mouse hover */
   }
   
   #allRights {
