--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -71,7 +71,8 @@ font-family: 'Playfair Display', serif;
 margin-top: -4px; 
 font-size: 14px; 
 letter-spacing: 1px; 
-color:  rgb(122, 148, 16); 
+color: black;
+/* color:  rgb(122, 148, 16);  */
 text-align: right; 
 font-weight: 400;
 }
@@ -80,7 +81,8 @@ font-weight: 400;
   font-family: 'Playfair Display', serif;
     margin-top: 14px; 
     font-size: 14px; 
-    color:  rgb(122, 148, 16); 
+    color: black;
+    /* color:  rgb(122, 148, 16);  */
     text-align: left;
     font-weight: 400;
     }
