--- a/assets/css/whoweare.css
+++ b/assets/css/whoweare.css
@@ -79,7 +79,8 @@
   background-color: rgb(140, 170, 20); 
 }
 .about-us aside ul li:nth-child(2) {
-  background-color: #0066c8;
+  /* background-color: #0066c8; */
+  background-color: rgb(5, 115, 224);
 }
 .about-us aside ul li:nth-child(3) {
   background-color: black;
