--- a/assets/css/navbar-logo-white.css
+++ b/assets/css/navbar-logo-white.css
@@ -25,7 +25,7 @@
     padding-bottom: 8px;
     padding-right: 50px; 
     position:absolute;
-    background-color: white;
+    background-color: black;
     top: 0px;
     width:100%;
     z-index:4;
@@ -41,7 +41,7 @@
     text-decoration: none;
     font-size: 15.5px; 
     padding:10px;
-    color: black;
+    color: white;
     font-family: 'Raleway';
     font-weight: thin; 
   }
@@ -83,7 +83,8 @@
   }
   ul li ul.dropdown{
     min-width: 175px; /* Set width of the dropdown */
-    background-color: rgb(228, 228, 228);
+    /* background-color: rgb(228, 228, 228); */
+    background-color: black; 
     padding: 6px; 
     word-spacing: 0px; 
     display: none;
