updated nav bar on other sub pages

--- a/assets/css/newcases.css
+++ b/assets/css/newcases.css
@@ -41,7 +41,7 @@ a:hover {
     text-align: left;
     font-size: 17px;
     font-weight: 400; 
-    color: #0066c8;
+    color: rgb(4, 113, 223);
     text-transform: uppercase;
   }
   td{
