--- a/assets/css/landmarkresults.css
+++ b/assets/css/landmarkresults.css
@@ -42,12 +42,12 @@ a:hover {
     font-family: 'Raleway';
     text-align: center; 
     font-size: 15px; 
-    color: #0178e7;
+    color: rgb(4, 113, 223);
 }
 
 #landmark-seemore:hover {
     cursor: pointer; 
-    color: #045caf;
+    color: rgb(5, 106, 207);
 }
 
 .international-landmark-header {
