--- a/assets/css/whoweare.css
+++ b/assets/css/whoweare.css
@@ -6,7 +6,7 @@
 
 .about-us {
   padding-top: 100px; 
-  padding-bottom: 63px; 
+  padding-bottom: 59px; 
   margin: 0 auto; 
   width: 1130px;
   max-width: 90%;
@@ -77,7 +77,9 @@
 }
 .about-us aside ul li:first-child {
   background-color: rgb(140, 170, 20); 
+  font-family: 'Raleway';
 }
+
 .about-us aside ul li:nth-child(2) {
   /* background-color: #0066c8; */
   background-color: rgb(3, 105, 207);
