--- a/assets/css/landmarkresults.css
+++ b/assets/css/landmarkresults.css
@@ -1,5 +1,6 @@
 
-.whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
+/* .whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;} */
+.stockmoney { background-image: url("../images/stockmoney.jpg"); height: 300px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
 
 section {
@@ -20,7 +21,7 @@ a:hover {
     text-transform: uppercase;
     font-weight: 300;
     text-align: center;
-    margin-top: 10px; 
+    margin-top: 60px; 
     margin-bottom: 10px;
   }
   
