--- a/assets/css/newcases-about.css
+++ b/assets/css/newcases-about.css
@@ -1,5 +1,6 @@
-
-.whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
+/* 
+.whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;} */
+.newcases-submit { background-image: url("../images/submit.jpg"); height: 300px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
 
 .newcases-about-header {
