--- a/assets/css/FAQs.css
+++ b/assets/css/FAQs.css
@@ -1,5 +1,5 @@
 
-.whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
+.faqs-image { background-image: url("../images/faqs.jpg"); height: 300px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
 /* // FAQS LANDING PAGE  */ 
 .FAQ-header {
