--- a/assets/css/awards.css
+++ b/assets/css/awards.css
@@ -1,4 +1,4 @@
-.whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
+.awards-image { background-image: url("../images/awards.jpg"); height: 300px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
 /* // BEGINNING OF AWARDS CAROUSEL ON LANDING PAGE */
 
