--- a/assets/css/community.css
+++ b/assets/css/community.css
@@ -1,5 +1,5 @@
   
-  .whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
+  .community-image { background-image: url("../images/community.jpg"); height: 300px; background-repeat: no-repeat;}
   /* //////// ****** /////////////////////////// */
   /* // IN THE COMMUNITY // */
     .community-header {
