--- a/assets/css/conferences.css
+++ b/assets/css/conferences.css
@@ -1,5 +1,5 @@
 
-.whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
+.conferences-image{ background-image: url("../images/conferences.jpg"); height: 300px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
 /* // CONFERENCES LANDING PAGE  */ 
 .conferences-header {
