--- a/assets/css/newcases.css
+++ b/assets/css/newcases.css
@@ -1,5 +1,5 @@
 
-.whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
+.new-cases-image{ background-image: url("../images/newcases.jpg"); height: 300px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
 
 section {
