--- a/assets/css/sustainability.css
+++ b/assets/css/sustainability.css
@@ -1,4 +1,4 @@
-.whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;}
+.sustainability-image { background-image: url("../images/sustainability.jpg"); height: 300px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
   /* // BEGINNING OF SUSTAINABILITY PAGE  // */
   .sustainability-header {
