--- a/assets/css/fraud.css
+++ b/assets/css/fraud.css
@@ -1,4 +1,4 @@
-.reportfraud-image { background-image: url("../images/reportfraud.jpg"); height: 300px; background-repeat: no-repeat;}
+.reportfraud-image { background-image: url("../images/abstract.jpg"); height: 300px; background-repeat: no-repeat;}
 
 .fraud-header {
     font-family: 'Raleway'; 
