--- a/assets/css/videosLP.css
+++ b/assets/css/videosLP.css
@@ -267,7 +267,7 @@ p {
     max-width: 48%;
     min-width: 300px;
     margin: 1%;
-    border: 1px solid;
+    /* border: 1px solid; */
     background-color: whitesmoke;
   }
   
