--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -6,7 +6,7 @@
   font-family: 'Raleway'; 
   font-size: 37px; 
   padding-bottom: 28px; 
-  margin-top: -45px;
+  margin-top: 35px;
   font-weight: 300; 
   color: black;
   text-align: center;
@@ -98,6 +98,7 @@
     text-align: center; 
     margin: auto;
     margin-top: -50px; 
+    margin-bottom: 47px; 
     border: 1px solid black; 
     width: 180px; 
     padding: 15px; 
