--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -159,10 +159,10 @@
     background-image: url(../images/emily.png) !important;
   }
   .container .row.regular-version .col-md-4:nth-child(3) .img-child {
-    background-image: url(../images/emily.png) !important;
+    background-image: url(../images/wayfair.png) !important;
   }
-  .container .row.regular-version .col-md-4:nth-child(4) .img-child {
-    background-image: url(../images/whiteglobe.jpg) !important;
+  .container .row.regular-version .col-md-4:nth-child(2) .img-child {
+    background-image: url(../images/SOC.png) !important;
   }
   .container .row.regular-version .col-md-4 .news-card-container {
     padding-left: 15px;
