--- a/assets/css/people-LP.css
+++ b/assets/css/people-LP.css
@@ -1,4 +1,4 @@
-.people-LP-sub { background-color: rgb(34, 34, 34); height: 518px; background-repeat: no-repeat;}
+.people-LP-sub { background-color: rgb(34, 34, 34); height: 550px; background-repeat: no-repeat;}
 .people-LP-name {
     font-family: 'Raleway'; 
     font-size: 44px; 
@@ -65,5 +65,22 @@
     line-height: 30px; 
 }
 
+#tabs:hover {
+    cursor: pointer;
+}
 
+/* #related-cases {
+    margin-top: 60px; 
+    letter-spacing: 5px;
+    border: 1px solid black; 
+    font-size: 16px;
+    padding: 25px; 
+    width: 260px;
+    text-align: center; 
+}
 
+#related-cases:hover {
+    cursor: pointer; 
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+} */
