--- a/assets/css/socialmediabuttons.css
+++ b/assets/css/socialmediabuttons.css
@@ -4,8 +4,16 @@
     text-align: center;
     padding-top: 35px; 
     padding-bottom: 35px; 
-    background-color: rgb(245, 245, 245);;
+    background-color: none;
   }
+
+  #social1 {
+    text-align: center;
+    padding-top: 35px; 
+    padding-bottom: 35px; 
+    background-color: rgb(247, 247, 247);;
+  }
+  
   
   .smGlobalBtn { /* global button class */
       display: inline-block;
