--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -19,7 +19,7 @@
     height: 100%;
     /* margin-top: 20px;  */
     padding: 60px; 
-    margin-bottom: 20px; 
+    margin-bottom: 10px; 
     color: black;
     /* border: 1px solid rgb(184, 184, 184); */
     /* background-color: rgb(243, 243, 243); */
@@ -56,6 +56,7 @@ a:hover{
 .team-member {
   margin: 15px 0;
   padding: 0;
+  background-color: rgb(231, 231, 231); 
 }
 
 .team-member figure {
@@ -74,7 +75,13 @@ a:hover{
 .team-member figcaption p {
   font-size: 14px;
   font-family: 'Raleway';
-  font-weight: 300px; 
+  /* font-weight: 300px;  */
+  letter-spacing: 1px;
+}
+
+p {
+  font-size: 15px; 
+  letter-spacing: 1px; 
 }
 
 .team-member figcaption ul {
@@ -99,7 +106,7 @@ a:hover{
 .team-member #people-name {
   margin: 10px 0 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 17px;
 }
 
 #people-name:hover {
@@ -107,6 +114,13 @@ a:hover{
   cursor: pointer; 
 }
 
+#people-name {
+  background-color: white;
+}
+
+p{
+  background-color: white;
+}
 
 .team-member figcaption {
   padding: 50px;
