updted cases pages so that table doesn't scroll and displays full page

--- a/assets/css/settledcases.css
+++ b/assets/css/settledcases.css
@@ -34,7 +34,7 @@ a:hover {
    }
   .tbl-content{
     height: 400px;
-    overflow-x:auto;
+    overflow-x: none;
     margin-top: 0px;
   }
   th{
