--- a/assets/css/currentcases.css
+++ b/assets/css/currentcases.css
@@ -33,7 +33,7 @@ a:hover {
    }
   .tbl-content{
     height: 300px;
-    overflow-x:auto;
+    overflow-x: none;
     margin-top: 0px;
   }
   th{
@@ -75,18 +75,7 @@ a:hover {
     th, td {
       font-size: 11.5px; 
     }
-  
+  }
 
   
   
-  /* for custom scrollbar for webkit browser*/
-  
-  ::-webkit-scrollbar {
-      width: 6px;
-  } 
-  ::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  } 
-  ::-webkit-scrollbar-thumb {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  }
