--- a/assets/css/newcases.css
+++ b/assets/css/newcases.css
@@ -33,7 +33,7 @@ a:hover {
    }
   .tbl-content{
     height: 300px;
-    overflow-x:auto;
+    overflow-x: none;
     margin-top: 0px;
   }
   th{
@@ -75,13 +75,14 @@ a:hover {
     th, td {
       font-size: 11.5px; 
     }
+  }
   
 
   
   
   /* for custom scrollbar for webkit browser*/
   
-  ::-webkit-scrollbar {
+  /* ::-webkit-scrollbar {
       width: 6px;
   } 
   ::-webkit-scrollbar-track {
@@ -89,4 +90,4 @@ a:hover {
   } 
   ::-webkit-scrollbar-thumb {
       -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  }
+  } */
