--- a/assets/css/newcases-about.css
+++ b/assets/css/newcases-about.css
@@ -1,6 +1,6 @@
 /* 
 .whiteglobe-sub { background-image: url("../images/whiteglobe.jpg"); height: 300px; background-repeat: no-repeat;} */
-.newcases-submit { background-image: url("../images/submit.jpg"); height: 300px; background-repeat: no-repeat;}
+.newcases-submit { background-image: url("../images/submit.jpg"); height: 200px; background-repeat: no-repeat;}
 /* //////// ****** /////////////////////////// */
 
 .newcases-about-header {
@@ -57,8 +57,25 @@
     background: rgb(151, 184, 19); 
 }
 
+.case-caption {
+    font-size: 17px;
+    font-family: 'Raleway';
+    text-align: left;
+    color: black; 
+    border-bottom: 1px solid black;
+    margin-bottom: 10px; 
+}
+
+.case-blurb {
+    font-size: 17px;
+    font-family: 'Raleway';
+    text-align: left;
+    color: black; 
+}
+
+
 .newcases-description {
-    font-size: 16px;
+    font-size: 18px;
     font-family: 'Raleway';
     text-align: left;
     color: black; 
