--- a/assets/css/carouselLP.css
+++ b/assets/css/carouselLP.css
@@ -44,6 +44,13 @@
       display: none; 
   }
 
+  @media only screen and (max-width: 2000px) {
+    .arrows {
+      position: absolute;
+      top: 115%;
+      margin-top: -31px;
+    }
+  }
 
   @media only screen and (max-width: 1400px) {
     .arrows {
