--- a/assets/css/corporategov.css
+++ b/assets/css/corporategov.css
@@ -140,12 +140,14 @@
   }
   
   .associated-cases {
-    background-color: rgb(140, 170, 20); 
+    /* background-color: rgb(140, 170, 20);  */
+    background-color: white; 
     color: black;
     margin-bottom: 500px; 
     margin-left: 240px; 
     position: absolute; 
-    padding: 10px; 
+    padding: 15px; 
+    border: 1px solid black;
     width: 200px;
     font-size: 16px; 
     text-align: center; 
@@ -153,7 +155,8 @@
 
   .associated-cases:hover {
     cursor: pointer; 
-    background-color: rgb(123, 150, 18); 
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
   }
 
 @media only screen and (max-width: 750px) {
