--- a/assets/css/carouselLP.css
+++ b/assets/css/carouselLP.css
@@ -71,7 +71,8 @@
   @media only screen and (max-width: 1200px) {
     .arrows {
       position: absolute;
-      top: 160%;
+      top: 125%;
+      left: 90%;
       margin-top: -31px;
     }
   }
@@ -81,6 +82,7 @@
     .arrows {
       position: absolute;
       top: 100%;
+      left: 90%;
       margin-top: -31px;
     }
   }
